welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:3: error: not found: value getHauteurMonde
	var t=new Array[Color](getHauteurMonde());
                               ^Array2:5: error: not found: value getHauteurMonde
	for (x<-0 to getHauteurMonde()) {
                     ^