welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	var t=new Array[Color](getHauteurMonde());
	
	for (x<-0 to getHauteurMonde()) {
		t(x)=getCouleursSol();
		avance();
	}
}
